AlexQuijote. Noveno Commit.
Páginas cambiadas.
1) Inicio. 2) Nosotros.

Cambios realizados:
1) Mejorar efecto hover zoom en imágenes centrales de página inicio.
2) Volver a estructurar mediante cards de bootstrap, la página Nosotros.
3) Agregar efecto hover, para que aparezca texto descriptivo, además,
agregué un enlace de hipervínculo, al perfil de LinkedIn, de cada miembro.

Fin del Noveno Commit de AlexQuijote.

--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -36,9 +36,10 @@
     transition: all 0.3s ease-out;
     overflow: hidden;
 }
+
 /* Efecto hover zoom */
-.img-container-estrategias :hover{    
-    transform: scale(1.17, 1.17);
+.img-container-estrategias :hover {    
+    transform: scale(1.17, 1.19);
 }
 
 .img-container-estrategias :hover + .centered {
@@ -61,7 +62,7 @@
 }
 /* Efecto hover zoom */
 .img-container-blockchain :hover{
-    transform: scale(1.17, 1.17);
+    transform: scale(1.17, 1.19);
 }
 
 .img-container-blockchain :hover + .centered {
@@ -84,7 +85,7 @@
 }
 /* Efecto hover zoom */
 .img-container-digitales :hover{
-    transform: scale(1.17, 1.17);
+    transform: scale(1.17, 1.19);
 }
 
 .img-container-digitales :hover + .centered {
@@ -107,7 +108,7 @@
 }
 /* Efecto hover zoom */
 .img-container-metaverso :hover{
-    transform: scale(1.17, 1.17);
+    transform: scale(1.17, 1.19);
 }
 
 .img-container-metaverso :hover + .centered {
@@ -119,20 +120,21 @@
 /* Texto */
 .centered {
     position: absolute;
-    text-shadow: 5px 11px 9px rgba(17, 0, 0, 1),11px -9px 14px rgba(0, 0, 0, 1);
     top: 6rem;
     left: 50%;
     transform: translate(-50%, -50%);
     text-transform: uppercase;
     min-width: 13rem;
     z-index:2 ;
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: all 0.3s ease-out;
 }
 
 /* Imágen */
 .img-inicio {
     width: 19rem;
     height: 12rem;
-    z-index: 1;
+    z-index: 2;
     border: 1px solid #004483ff;
     background-image: linear-gradient(#007df1ff, #007df1ff),
                     linear-gradient(#007df1ff, #007df1ff),
@@ -143,7 +145,10 @@
     background-position: left bottom, left bottom, right top, right top, 1px 1px;
     padding: 2px;
     position: relative;
-    
+    transition: all 0.3s ease-out;
+    outline: 2px solid white;
+    outline-style: groove;
+    outline-offset: -15px;
 }
 
 /* Satélites */
@@ -335,690 +340,3 @@
 }
 
 /* Aquí empieza el responsive */
-
-@media (max-width: 1559px) {
-    
-    .servicios-box-estrategia-1 {
-        left: 69%;
-    }
-
-    .servicios-box-metaverso-4 {
-        left: 70%;
-    }
-}
-
-@media (max-width: 1530px) {
-    .servicios-box-blockchain-1 {
-        left: 10%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 70%;
-    }
-}
-
-@media (max-width: 1499px) {
-    .servicios-box-estrategia-1 {
-        left: 71%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 72%;
-    }
-
-    .servicios-box-metaverso-1 {
-        left: 1.5%;
-    }
-
-    .servicios-box-metaverso-2 {
-        left: 1.5%;
-    }
-
-    .servicios-box-metaverso-3 {
-        left: 71%;
-    }
-
-    .servicios-box-metaverso-4 {
-        left: 72%;
-    }
-}
-
-@media (max-width: 1459px) {
-    .servicios-box-estrategia-1 {
-        max-width: 10rem;
-        left: 73%;
-    }
-
-    .servicios-box-estrategia-2 {
-        max-width: 10rem;
-        top: -2rem;
-        left: 5%;
-    }
-
-    .servicios-box-digitales-1 {
-        left: 4%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 74%;
-    }
-}
-
-@media (max-width: 1419px) {
-    .servicios-box-metaverso-1 {
-        max-width: 10rem;
-        left: 4%;
-    }
-
-    .servicios-box-metaverso-2 {
-        top: -4.5rem;
-        left: 1%;
-    }
-
-    .servicios-box-metaverso-3 {
-        max-width: 8rem;
-        top: -25rem;
-        left: 74%;
-    }
-
-    .servicios-box-metaverso-4 {
-        top: -16.5rem;
-        left: 74%;
-    }
-
-}
-
-@media (max-width: 1379px) {
-    .img-container-estrategias {
-        left: 22%;
-    }
-
-    .img-container-digitales {
-        left: 22%;
-    }
-
-    .servicios-box-estrategia-1 {
-        left: 72%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: 2%;
-    }
-
-    .servicios-box-blockchain-1 {
-        left: 7%;
-    }
-
-    .servicios-box-digitales-1 {
-        left: -1%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 71%;
-    }
-
-    .servicios-box-metaverso-2 {
-        max-width: 8rem;
-        top:-6rem;
-        left: 8%;
-    }
-
-    .servicios-box-metaverso-3 {
-        max-width: 8rem;
-        top:-26rem;
-        left: 76%;
-    }
-
-    .servicios-box-metaverso-4 {
-        max-width: 8rem;
-        top:-20rem;
-        left: 76%;
-    }
-}
-
-@media (max-width: 1319px) {
-    
-    .servicios-box-estrategia-1 {
-        max-width: 9rem;
-        left: 75%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: -0.5%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 74%;
-    }
-
-    .servicios-box-metaverso-1 {
-        left: 2%;
-    }
-
-    .servicios-box-metaverso-3 {
-        left: 79%;
-    }
-
-    .servicios-box-metaverso-4 {
-        left: 79%;
-    }
-}
-
-@media (max-width: 1259px) {
-
-    .img-container-metaverso {
-        left: 20%;
-    }
-    
-    .servicios-box-estrategia-1 {
-        max-width: 7rem;
-        padding-left: 0.5rem;
-        left: 78%;
-    }
-
-    .servicios-box-estrategia-2 {
-        max-width: 8rem;
-        padding-left: 1rem;
-        left: 4%;
-    }
-
-    .servicios-box-digitales-1 {
-        max-width: 8rem;
-        padding-left: 1rem;
-        left: 3%;
-    }
-
-    .servicios-box-digitales-2 {
-        max-width: 6rem;
-        padding-left: 1.5rem;
-        left: 78%;
-    }
-
-    .servicios-box-metaverso-1 {
-        max-width: 6rem;
-        padding-left: 1rem;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-        top: -14rem; 
-        left: 6%;
-    }
-
-    .servicios-box-metaverso-2 {
-        max-width: 6rem;
-        padding-left: 1rem;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        top: -4rem; 
-        left: 6%;
-    }
-
-    .servicios-box-metaverso-3 {
-        max-width: 6rem;
-        padding-left: 0.5rem;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        top: -24rem; 
-        left: 77%;
-    }
-
-    .servicios-box-metaverso-4 {
-        max-width: 7 rem;
-        padding-left: 1rem;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem; 
-        top: -16rem;
-        left: 76%;
-    }    
-}
-
-@media (max-width: 1239px) {
-    .servicios-box-estrategia-1 {
-        left: 80%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: 2.5%;
-    }
-
-    .servicios-box-blockchain-1 {
-        left: 5%;
-    }
-
-    .servicios-box-digitales-1 {
-        left: 2%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 79%;
-    }
-
-
-    .servicios-box-metaverso-1 {
-        left: 5.5%;
-    }
-
-    .servicios-box-metaverso-2 {
-        left: 5.5%;
-    }
-
-    .servicios-box-metaverso-3 {
-        left: 79%;
-    }
-
-    .servicios-box-metaverso-4 {
-        left: 77%;
-    }    
-
-}
-
-@media (max-width: 1219px) {
-    .servicios-box-estrategia-1 {
-        left: 81%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 81%;
-    }
-
-    .servicios-box-metaverso-2 {
-        left: 5%;
-    }
-
-    .servicios-box-metaverso-3 {
-        left: 80%;
-    }
-
-    .servicios-box-metaverso-4 {
-        max-width: 7rem;
-        padding-right: 2rem;
-        left: 80%;
-    }    
-
-}
-
-@media (max-width: 1179px) {
-/* Reducción de tamaño de imágenes centrales, y reubicación. */
-    .img-container-estrategias {
-        width: 18rem;
-        top: 14rem;
-        left: 25%;
-    }
-    
-    .img-container-blockchain {
-        width: 18rem;
-        top: 13.5rem;
-        left: 25%;
-    }
-    
-    .img-container-digitales {
-        width: 18rem;
-        top: 14rem;
-        left: 24%;
-    }
-    
-    .img-container-metaverso {
-        width: 18rem;
-        top: 13rem;
-        left: 24%;
-    }
-    /* Reubicación de lugar de textos  */
-
-    .centered {
-        text-shadow: 5px 11px 9px rgba(17, 0, 0, 1),11px -9px 14px rgba(0, 0, 0, 1);
-        top: -24%;
-    }
-    /* Aquí reacomodo el lugar de los satélites. */
-    .servicios-box-estrategia-1 {
-        top: -9rem;
-        left: 75%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: 5.5%;
-    }
-
-    .servicios-box-blockchain-1 {
-        top: 4rem;
-        left: 5%;
-    }
-
-    .servicios-box-digitales-1 {
-        top: -8rem;
-        left: 5%;
-    }
-
-    .servicios-box-digitales-2 {
-        top: 0rem;
-        left: 73%;
-    }
-
-    .servicios-box-metaverso-1 {
-        top: -11rem;
-        left: 9.5%;
-    }
-
-    .servicios-box-metaverso-2 {
-        top: -2rem;
-        left: 8%;
-    }
-
-    .servicios-box-metaverso-3 {
-        top: -22rem;
-        left: 72%;
-    }
-
-    .servicios-box-metaverso-4 {
-        top: -13rem;
-        left: 74%;
-    }    
-}
-
-@media (max-width: 1129px) {
-    
-    .servicios-box-estrategia-1 {
-            top: -9rem;
-            left: 77%;
-        }
-    
-        .servicios-box-estrategia-2 {
-            left: 4%;
-        }
-    
-        .servicios-box-digitales-1 {
-            top: -8rem;
-            left: 2%;
-        }
-    
-        .servicios-box-digitales-2 {
-            top: 0rem;
-            left: 75%;
-        }
-
-        .servicios-box-metaverso-3 {
-            top: -22rem;
-            left: 75%;
-        }
-    
-        .servicios-box-metaverso-4 {
-            top: -13rem;
-            left: 76%;
-        }    
-}
-
-
-@media (max-width: 1079px) {
-
-    .img-container-estrategias {
-        left: 23%;
-    }
-
-    .img-container-metaverso {
-        left: 21%;
-    }
-    
-    .servicios-box-estrategia-1 {
-        top: -9rem;
-        left: 77%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: 1%;
-    }
-
-    .servicios-box-blockchain-1 {
-        left: 2%;
-    }
-
-    .servicios-box-digitales-1 {
-        top: -8rem;
-        left: 2%;
-    }
-
-    .servicios-box-digitales-2 {
-        top: 0rem;
-        left: 77%;
-    }
-
-    .servicios-box-metaverso-1 {
-        top: -11rem;
-        left: 4.5%;
-    }
-
-    .servicios-box-metaverso-2 {
-        top: -2rem;
-        left: 4.5%;
-    }
-
-    .servicios-box-metaverso-3 {
-        top: -22rem;
-        left: 75%;
-    }
-
-    .servicios-box-metaverso-4 {
-        top: -13rem;
-        left: 75%;
-    }    
-}
-
-@media (max-width: 1029px) {
-    
-    .servicios-box-estrategia-1 {
-        left: 80%;
-    }
-
-    .servicios-box-estrategia-2 {
-        left: -1%;
-    }
-
-    .servicios-box-blockchain-1 {
-        left: 0%;
-    }
-
-    .servicios-box-digitales-1 {
-        left: 0%;
-    }
-
-    .servicios-box-digitales-2 {
-        left: 80%;
-    }
-
-    .servicios-box-metaverso-1 {
-        left: 2.5%;
-    }
-
-    .servicios-box-metaverso-2 {
-        left: 2.5%;
-    }
-
-    .servicios-box-metaverso-3 {
-        left: 78%;
-    }
-
-    .servicios-box-metaverso-4 {
-        left: 78%;
-    }    
-}
-
-/* En el pixel 991 colapsa a dispositivo móvil, y se reorganizan los satélites */
-
-@media (max-width: 991px) {
-/* Reacomodar el alto de las filas para que entre todo el contenido */
-
-    .fila-1{
-        min-height: 20rem;
-    }
-    
-    #columa-2 {
-        min-height: 29rem;
-    } 
-    
-    #columna-II {
-        min-height: 29rem;
-    }
-    /* Reubicación de imágenes centrales. */
-    .img-container-estrategias {
-        top: 9rem;
-        left: 18%;
-    }
-
-    .img-container-blockchain {
-        top: 8rem;
-        left: 18%;
-    }
-
-    .img-container-digitales {
-        top: 9rem;
-        left: 18%;
-    }
-
-    .img-container-metaverso {
-        top: 9rem;
-        left: 18%;
-    }
-/* Reubicación y rescalación de satélites. */
-    .servicios-box-estrategia-1 {
-        top: 2rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-estrategia-2 {
-        top: 3rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-blockchain-1 {
-        top: 1rem;
-        left: 25%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-digitales-1 {
-         top: 2rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-digitales-2 {
-        top: 3rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-metaverso-1 {
-        top: 2rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-metaverso-2 {
-        top: 3rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-metaverso-3 {
-        top: 4rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }
-
-    .servicios-box-metaverso-4 {
-        top: 5rem;
-        left: 24%;
-        max-width: 50%;
-        padding-top: 0rem;
-        padding-bottom: 0rem;
-    }   
-}
-
-@media (max-width: 987px) {
-    
-    .servicios-box-metaverso-4 {
-        max-width: 58%;
-    }
-}
-
-@media (max-width: 918px) {
-    
-    .servicios-box-estrategia-2 {
-        max-width: 55%;
-    }
-}
-
-@media (max-width: 857px) {
-    
-    .servicios-box-metaverso-4 {
-        max-width: 59%;
-    }
-}
-
-@media (max-width: 844px) {
-    
-    .servicios-box-metaverso-4 {
-        max-width: 63%;
-    }
-}
-
-
-@media (max-width: 839px) {
-    
-    .servicios-box-estrategia-2 {
-        max-width: 59%;
-    }
-}
-
-@media (max-width: 793px) {
-    
-    .servicios-box-metaverso-4 {
-        max-width: 67%;
-    }
-}
-
-@media (max-width: 786px) {
-    
-    .servicios-box-estrategia-2 {
-        max-width: 63%;
-    }
-}
-
-/* En el pixel 767 se forma una sola columna */
-
-@media (max-width: 767px) {
-/* Acomodando la altura de cada columna. */
-
-    .fila-1 {
-        min-height: 40rem;
-    }
-    
-    #columna-2 {
-        min-height: 23rem;
-    } 
-    
-    #columna-II {
-        min-height: 30rem;
-    }
-    
-    /* Alineando las imágenes centrales */
-
-    .img-container-estrategias {
-        left: 30%;
-    }
-}
