--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -1,41 +1,54 @@
 <app-nav></app-nav>
-<div class="container">
-    <h1 class="text-center mb-2 pb-5 pt-6">{{"WE.TITLE" | translate}}</h1>
-    <div class="row justify-content-md-center" >
-        <div class="card2">
-          <div class="card-body">
-            <img src="../../../assets/img/roger.svg" class="img1"  alt="">
-            <img src="../../../assets/img/Recurso.svg" class="cuadro1"  alt="">
-              <p class="text1">{{"WE.PERSON-1" | translate}}</p>
-            </div>
+  <!-- inicio container -->
+  <div class="container"> 
+    <!-- h1 -->
+    <h1 class="text-center mb-12"> {{"WE.TITLE" | translate}} </h1>
+    <!-- inicio fila 1 -->
+    <div class="row">
+      <!-- inicio columna 1 de fila 1 -->
+      <div class="col-md-4">
+        <!-- inicio card de Roger. -->
+        <div class="card text-white ml-16">
+          <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
+          <div class="card-img-overlay">
+            <h5 class="card-title">{{"WE.PERSON-1" | translate}}</h5>
+            <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
+            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+            <a href="https://bo.linkedin.com/in/rogerprado" target="_blank" ></a>
           </div>
-          <div class="card1">
-            <div class="card-body" >
-                <img src="../../../assets/img/pedro.svg" class="img1" alt="">
-                <img src="../../../assets/img/Recurso.svg" class="cuadro2"  alt="">
-                <p class="text2">{{"WE.PERSON-2" | translate}}</p>
-            </div>
+        </div>
+      </div>
+      <!-- inicio columna 2 de fila 1 -->
+      <div class="col-md-4">
+        <!-- inicio card de Pedro. -->
+        <div class="card text-white ml-16">
+          <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
+          <div class="card-img-overlay">
+            <h5 class="card-title">{{"WE.PERSON-2" | translate}}</h5>
+            <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
+            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+            <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
           </div>
-          <div  class="card2" >
-            <div class="card-body" >
-                <img src="../../../assets/img/mile.svg" class="img1" alt="">
-                <img src="../../../assets/img/Recurso.svg" class="cuadro3"  alt="">
-                <p class="text3">{{"WE.PERSON-3" | translate}}</p>
-            </div>
-          </div>  
         </div>
-
-        <div class="row">
-            <div class="card-body" >
-                <img src="../../../assets/img/flechaIzq.svg" class="imgIzq" alt="">
-            </div>
-            <div class="card-body" >
-                <img src="../../../assets/img/flechaDer.svg" class="imgDer" alt="">
-            </div>
-        </div>
-
-      <div class="container-md col-md-9 p-8">
-        <p class="text-justify pb-8 pt-8">{{"WE.PARAGRAPH" | translate}}</p>
+      </div>
+      <!-- inicio columna 3 de fila 1 -->
+      <div class="col-md-4">
+        <!-- inicio card de Milenka. -->
+        <div  class="card text-white ml-16">
+          <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
+          <div class="card-img-overlay"> 
+            <h5 class="card-title">{{"WE.PERSON-3" | translate}}</h5>
+            <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
+            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+            <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
+          </div>
+        </div>  
+      </div>
     </div>
-</div>
-
+    <!-- inicio fila 2 -->
+    <div class="row">
+      <!-- inicio columna 1 de fila 2 -->
+      <div class="offset-1 col-md-10 p-8">
+        <p class="text-justify pb-8 pt-8">{{"WE.PARAGRAPH" | translate}}</p>
+      </div>
+    </div>
