--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -1,53 +1,63 @@
-.img1{
-  width: 300px;
-  height: 300px;
-}
-
-.card1{
-    margin-left: 15px;
-    width: 20rem;
-}
-.card2{
-    margin-top: -75px;
-    margin-left: 15px;
-    width: 20rem;
-}
-.cuadro1{
-    width: 225px;
-    margin-top: -50px;
-    margin-left: 10px;
-}
-.cuadro2{
-    width: 200px;
-    height:65px ;  
-    margin-top: -35px;
-    margin-left: 20px; 
-}
-.cuadro3{
-    width: 225px;
-    margin-top: -50px;
-    margin-left: 10px;
-}
-.text1{
-    margin-top: -45px;
-    margin-left: 30px;
-}
-.text2{
-    margin-top: -45px;
-    margin-left: 75px;
-}
-.text3{
-    margin-top: -45px;
-    margin-left: 60px;
-}
-.imgIzq{
-width: 75px;
-margin-left: 450px;
-margin-top: -65px;
-}
-.imgDer{
-width: 75px;
-margin-left: 950px;
-margin-top: -100px;
-}
+.card {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    text-align: left;
+    line-height: 1.4em;
+    font-size: 16px;
+  }
+  .card * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+  }
+  .card-img-overlay {
+    color: black;
+    position: absolute;
+    top: calc(77%);
+    width: 100%;
+    background-color: #ffffff;
+    padding: 15px 25px 65px;
+  }
+  .card-img-overlay:before {
+    position: absolute;
+    content: '';
+    z-index: 2;
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
+    background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
+  }
+  
+  .card-text {
+    margin-top: 2rem;
+  }
+  .card-title {
+    font-weight: 300;
+    font-size: 1.4em;
+    line-height: 1.2em;
+    text-transform: uppercase;
+  }
+  .card-text {
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    opacity: 0.9;
+  }
+  .card a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+  }
+  .card:hover .card-img-overlay {
+    top: 80px;  
+  }
   
