Decimo Commit. Cambios Varios.

--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -13,7 +13,7 @@
           <div class="card-img-overlay">
             <h5 class="card-title">{{"WE.PERSON-1" | translate}}</h5>
             <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
-            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
             <a href="https://bo.linkedin.com/in/rogerprado" target="_blank" ></a>
           </div>
         </div>
