--- a/src/app/Components/aliados/aliados.component.css
+++ b/src/app/Components/aliados/aliados.component.css
@@ -1,18 +1,60 @@
-.img1{
-    width: 200px;
-    height: 200px;
-    margin-top: -80%;
-    margin-left: 10%;
+.card, .card ::after {
+    position: relative;
+    width: 290px;
+    height:290px;
+    left: 5px;
+    top: 5px;
+    background: url(../../../assets/img/marco.svg);
+    background-repeat: no-repeat;
 }
-.card1{
-    margin-left: 15px;
-    width: 20rem;
+
+#card2, #card2 ::after {
+    position: relative;
+    width: 290px;
+    height:290px;
+    left: 5px;
+    top: 5px;
+    background: url(../../../assets/img/open.svg);
+    background-repeat: no-repeat;
 }
-.cuadro2{
-    margin-top: 15%;
+
+.card-img {
+    position: absolute;
+    top: -0.2rem;
+    left: -0.9rem;
+    transition: .5s cubic-bezier(.5,.03,.41,1);
 }
-.img2{
-  margin-top: -30%;
-  width: 225px;
-  margin-left: 5%;
+
+.img1 {
+    position: absolute;
+    width: 16rem;
+    height: 14rem;
+    top: 1.5rem;
+    left: 1.5rem;
+    transition: all .5s;
+}
+
+.img2 {
+    width: 16rem;
+    height: 6rem;
+    box-shadow: 15px 18px 5px rgba(0, 0, 0, 0.623);  
+    border: 1px solid #004483ff;       
+    background-image: linear-gradient(#007df1ff, #007df1ff),
+    linear-gradient(#007df1ff, #007df1ff),
+    linear-gradient(#007df1ff, #007df1ff),
+    linear-gradient(#007df1ff, #007df1ff);    
+    background-repeat: no-repeat;
+    background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
+    background-position: left bottom, left bottom, right top, right top, 1px 1px;
+    padding: 2px;
+    outline: 2px solid #004483ff;
+    outline-offset: -5px;
+    top: 0.7rem;
+    left: 2.3rem;
+    transition: all .5s;
+}
+
+/* Comienza efecto */
+.card :hover {
+    transform: translate(-15px, -15px);
 }
