--- a/src/app/Components/aliados/aliados.component.html
+++ b/src/app/Components/aliados/aliados.component.html
@@ -1,27 +1,44 @@
 <app-nav></app-nav>
+<!-- Inicio container. -->
 <div class="container">
-    <div class="row justify-content-md-center" >
-        
-      <div class="card1">
-          <div class="card-body">
-            <img src="../../../assets/img/marco.svg" class="cuadro1"  alt="">
-            <img src="../../../assets/img/asoc1.svg" class="img1"  alt="">        
-          </div>
+<!-- h1 -->
+<h1 class="text-center mb-12"> ALIADOS </h1>
+  <!-- Inicio fila 1. -->
+  <div class="row justify-content-center">
+    <!-- Inicio columna 1 de fila 1. -->
+    <div class="col-md-4">        
+      <div class="card ml-16">
+        <div class="card-img">
+          <img src="../../../assets/img/asoc1.png" class="img1"  alt="">        
         </div>
-        
-        <div class="card1">
-          <div class="card-body">
-              <img src="../../../assets/img/open.svg" class="cuadro2"  alt="">
-              <img src="../../../assets/img/asoc2.svg" class="img2" alt="">                   
-          </div>
+      </div>
+    </div>
+    <!-- Inicio columna 2 de fila 1. -->
+    <div class="col-md-4">
+      <div class="card ml-16 mt-16" id="card2">
+        <div class="card-img">
+          <img src="../../../assets/img/asoc2.svg" class="img2" alt="">                   
         </div>
-        
-        <div  class="card1 " >
-          <div class="card-body ">
-              <img src="../../../assets/img/marco.svg" class="cuadro3"  alt="">
-              <img src="../../../assets/img/asoc3.svg" class="img1" alt="">        
-          </div>
+      </div>
+    </div>
+    <!-- Inicio columna 3 de fila 1. -->
+    <div class="col-md-4">
+      <div  class="card ml-16" >
+        <div class="card-img ">
+          <img src="../../../assets/img/asoc3.svg" class="img1" alt="">        
         </div>
-
+      </div>
     </div> 
+  </div>
+  <!-- Inicio fila 2. -->
+  <div class="row justify-content-center">
+    <!-- Inicio columna 1 de fila 2. -->
+    <div class="col-md-4 mt-16">        
+      <div class="card ml-16 mb-16">
+        <div class="card-img">
+          <img src="../../../assets/img/asoc4.jpg" class="img1"  alt="">        
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
