--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -12,7 +12,7 @@
                 <!-- Inicio satélites de estrategias -->
                 <a href="/marketing"class="servicios-box-estrategia-1">{{"BEGINNING.TITLE-9" | translate}}</a>
                 <a href="/coaching"class="servicios-box-estrategia-2">{{"BEGINNING.COACHING-2" | translate}}</a>
-                <a href="/services" class="servicios-box-estrategia-3">{{"BEGINNING.TITLE-3" | translate}}</a> 
+                <a href="/developers" class="servicios-box-estrategia-3">{{"BEGINNING.TITLE-3" | translate}}</a> 
                 <!-- Final satélites de estrategias -->
             </div>
             <!-- Inicio columna 2 de la fila 1 -->
@@ -23,7 +23,7 @@
                 </div>
                 <!-- Inicio satélite de blockchain -->
                 <a class="servicios-box-blockchain-1" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>
-                <a class="servicios-box-blockchain-2" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>    
+                <a class="servicios-box-blockchain-2" href="/">{{"BEGINNING.TITLE-14" | translate}}</a>    
                 <!-- Fin de satélite de blockchain -->
             </div>
         </div>
@@ -36,7 +36,7 @@
                     <a class="centered">{{"BEGINNING.TITLE-1" | translate}}</a>
                 </div>
                 <!-- Inicio satélites de digitales -->
-                <a href="#" class="servicios-box-digitales-1">{{"BEGINNING.TITLE-13" | translate}}</a>              
+                <a href="/services" class="servicios-box-digitales-1">{{"BEGINNING.TITLE-13" | translate}}</a>              
                 <a href="/apps"class="servicios-box-digitales-2">{{"BEGINNING.TITLE-4" | translate}}</a>
                 <a href="/commerce" class="servicios-box-digitales-3">{{"BEGINNING.TITLE-2" | translate}}</a>
                 <!-- FIn satélites de digitales -->
@@ -48,8 +48,8 @@
                     <a class="centered">{{"BEGINNING.TITLE-5" | translate}}</a>
                 </div>
                 <!-- Inicio satélites de metaverso -->
-                <a href="/produccion"class="servicios-box-metaverso-1">{{"BEGINNING.TITLE-8" | translate}}</a>
-                <a class="servicios-box-metaverso-2" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
+                <a class="servicios-box-metaverso-1" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
+                <a class="servicios-box-metaverso-2" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>
                 <!-- Fin de satélites de metaverso -->
             </div>
         </div>
